bug#8646 - deadlock if long transaction causes binlog rotate

sql/sql_yacc.yy:
  duplicated symbol removed